test/conformance/chainsaw/generating-policies/reports/generate-cm/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: generate-cm
spec:
  steps:
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait-generating-policy-ready
    use:
      template: ../../../../_step-templates/generating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: generate-cm
  - name: create a trigger namespace
    try:
    - apply:
        file: ns.yaml
  - name: check that the configmap is generated
    try:
    - assert:
        file: cm-assert.yaml
        timeout: 30s
  - name: check reports
    try:
    - assert:
        file: report.yaml
        timeout: 30s
